[project]
name = "trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym-trading-env>=0.3.3",
    "gymnasium==0.29.1",
    "matplotlib==3.7.1",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
    "stable-baselines3==2.1.0",
    "torch==2.0.1",
]
